Fix: Navbar Fonts Readability and Accessibility (#777)
* Navbar Acessibility and readability

* Navbar Fonts

* Trigger Build

* Trigger Builds

---------

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,4 +1,13 @@
 // add your own SCSS styling.
+
+/* -------------------------------------------------- */
+/* Navbar accessibility & readability  fonts          */
+/* -------------------------------------------------- */
+
+.navbar-light {
+  font-family: "Inter", "Open Sans", "Lexend", "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !important; 
+}
+
 .border-3 {
   border-width: 3px !important;
 }
